[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/godotWad/src/wadLoader/wadLoaderScript.gd" type="Script" id=1]
[ext_resource path="res://addons/godotWad/src/wadLoader/floorCreator.gd" type="Script" id=2]
[ext_resource path="res://addons/godotWad/src/wadLoader/lumpParser.gd" type="Script" id=3]
[ext_resource path="res://addons/godotWad/src/wadLoader/LevelBuilder.gd" type="Script" id=4]
[ext_resource path="res://addons/godotWad/src/wadLoader/MeshCombiner.gd" type="Script" id=5]
[ext_resource path="res://addons/godotWad/src/thingScripts/thingParser.gd" type="Script" id=6]
[ext_resource path="res://addons/godotWad/src/wadLoader/ResourceManager.gd" type="Script" id=7]
[ext_resource path="res://addons/godotWad/src/wadLoader/ImagerBuilder.gd" type="Script" id=8]
[ext_resource path="res://addons/godotWad/gameModeCreator.gd" type="Script" id=9]
[ext_resource path="res://addons/godotWad/src/wadLoader/floorCreator3.gd" type="Script" id=10]

[node name="WadLoader" type="Spatial"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "




",
"mapNames": [  ]
}
occluderBBclip = 30

[node name="LumpParser" type="Node" parent="."]
script = ExtResource( 3 )
__meta__ = {
"hidden": true
}

[node name="LevelBuilder" type="Spatial" parent="."]
script = ExtResource( 4 )
__meta__ = {
"hidden": true
}

[node name="ImageBuilder" type="Node" parent="."]
script = ExtResource( 8 )
__meta__ = {
"hidden": true
}

[node name="FloorBuilder" type="Node" parent="."]
script = ExtResource( 2 )
__meta__ = {
"hidden": true
}

[node name="ThingParser" type="Spatial" parent="."]
script = ExtResource( 6 )
__meta__ = {
"hidden": true,
"ready": true
}

[node name="MeshCombiner" type="Node" parent="."]
script = ExtResource( 5 )
__meta__ = {
"hidden": true
}

[node name="ResourceManager" type="Node" parent="."]
script = ExtResource( 7 )
__meta__ = {
"hidden": true
}

[node name="FloorBuilder3" type="Node" parent="."]
script = ExtResource( 10 )
__meta__ = {
"hidden": true
}

[node name="gameModeCreator" type="Node" parent="."]
script = ExtResource( 9 )
